# fastapi-health

./: .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: docs.yml  test.yml
api/: index.html
docs/: api.md  index.md
fastapi_health/: __init__.py  _class.py  endpoint.py  function.py  route.py
search/: search_index.json
tests/: test_app.py  test_endpoint.py  test_health.py  test_route.py  test_version.py
