[tool.poetry]
name = "fastapi-health"
version = "0.2.1"
description = "Heath check on FastAPI applications."
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Kludex/fastapi-health"

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.0"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"
mypy = "^0.790"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
