
[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[project]
name = "fastapi-health"
version = "0.4.0"
description = "Heath check on FastAPI applications. :ambulance:"
readme = "README.md"
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
requires-python = ">=3.7"
dependencies = ["fastapi>=0.63.0"]
optional-dependencies = {}

[project.urls]
Homepage = "https://github.com/Kludex/fastapi-health"
Source = "https://github.com/Kludex/fastapi-health"
Twitter = "https://twitter.com/marcelotryle"
Funding = "https://github.com/sponsors/Kludex"

[tool.mypy]
strict = true
show_error_codes = true

[tool.flake8]
statistics = true
max-line-length = 88
ignore = ["E203", "E501", "W503"]
per-file-ignores = ["__init__.py:F401"]

[tool.black]
target-version = ["py37"]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error", "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning"]

[tool.coverage.run]
source_pkgs = ["fastapi_health", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
