
[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[project]
name = "fastapi-health"
version = "0.4.0"
description = "Heath check on FastAPI applications. :ambulance:"
readme = "README.md"
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
requires-python = ">=3.8"
dependencies = ["fastapi>=0.85.0"]
optional-dependencies = {}

[project.urls]
Homepage = "https://github.com/Kludex/fastapi-health"
Source = "https://github.com/Kludex/fastapi-health"
Twitter = "https://twitter.com/marcelotryle"
Funding = "https://github.com/sponsors/Kludex"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "coverage[toml]",
  "pytest-sugar",
  "pytest-asyncio",
  "dirty-equals",
  "httpx",
]

[tool.hatch.envs.test.scripts]
run = "coverage run -m pytest"
cov = "coverage report --show-missing --skip-covered"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]
dependencies = ["pydantic<2", "pydantic>=2"]

[tool.mypy]
strict = true
show_error_codes = true

[tool.ruff]
line-length = 100
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'T']
extend-ignore = ['E501']
target-version = "py38"

[tool.black]
target-version = ["py37"]
line_length = 100

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = [
    "error",
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[tool.coverage.run]
source_pkgs = ["fastapi_health", "tests"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
